2002-12-23 garlick
    * Added -D,--device [targets] command for getting status of RPC
      controlling [targets].  (List all devices if no targets specified).

2002-12-22 garlick
    * Updated list.[ch] and cbuf.[ch] to latest lsd-tools versions.

2002-12-20 garlick
    * Added powerman --version and powermand --version options.

2002-11-21 garlick
    * Fixed etc/icebox3.dev to handle flashing multiple beacons.

2002-11-12 garlick
    * Added etc/apc.dev for APC MasterSwitch

2002-11-09 garlick
    * Updated list.[ch], hostlist.[ch], and cbuf.[ch] from lsd-tools.
    * Renamed config.[ch] to parse_util.[ch] and created config.h.
    * Tagged powerman-1-0-15

2002-11-04 garlick
    * Switched over to Chris Dunlap's circular buffer module.
    * Update list.[ch] and cbuf.[ch] from lsd-tools.

2002-10-28 garlick
    * Minor cosmetic cleanup of data structures

2002-10-27 garlick
    * Added client options -d host[:port] (use alt server/port), 
      -L (display license).  
    * Cleaned up server options.
    * Updated man pages.
    * Tagged powerman-1-0-14

2002-10-26 garlick
    * Fix bug where inappropriate match ($N) values caused a runtime assert.
    * Attempting to initiate a command to a device now short circuits
      exponential reconnect backoff.
    * Implemented --beacon, --flash, --unflash, --temp, and --node in client.
    * Fix bug where actions never make it to the head of the device queue
      to time out when the device is hung trying to login (e.g. 
      vpcd --hung_rpc).  Now all actions queued up behind a timing out action
      on a device are also timed out.

2002-10-24 garlick
    * Changed magic vim comment at bottom of each file for tab expansion.
    * Tagged before-2nd-indent
    * Ran indent --no-tabs -kr *.[ch] on everything in src except 
      hostlist.[ch] and list.[ch] 
    * Tagged after-2nd-indent
    * Removed /etc/powerman/powerman.conf from RPM so powermand won't start
      unless it has been properly configured.
