@@ -289,13 +289,12 @@ static void _client_query_device_reply(Client * c, char *arg)
             if (arg && !_device_matches_targets(dev, arg))
                 continue;
 
-            /* FIXME: replace "devtype" with actual device type e.g. icebox3 */
             if (_make_pluglist(dev, nodelist, sizeof(nodelist))) {
                 _client_printf(c, CP_RSP_DEVICE, 
                         dev->name,
                         con > 0 ? con - 1 : 0, 
                         dev->stat_successful_actions,
-                        "devtype",
+                        dev->specname,
                         nodelist);
             }
         }
